@@ -1,5 +1,7 @@
 [1.5.3]
+<<<<<<< HEAD
 - API Addition: Added a HttpRequestBuilder, see https://github.com/libgdx/libgdx/pull/2691
+- Added LwjglApplicationConfiguration.useHDPI for Mac OS X with retina displays. Allows you to get "real" pixel coordinates for mouse and display coordinates.
 
 [1.5.2]
 - Fixed issue #2433 with color markup and alpha animation. 
